feat: add filtering usage my model and api key
